aumento de cobertura de testes unitários, porcetagem atual 80%.